add request read telemetry