@@ -1,5 +1,6 @@
 package application.service;
 
+import application.dto.DeviceIdDto;
 import application.dto.RequestReadTelemetry;
 import application.dto.ResponseReadTelemetry;
 import application.entity.Telemetry;
@@ -8,8 +9,12 @@ import com.datastax.oss.driver.api.core.cql.BoundStatement;
 import com.datastax.oss.driver.api.core.cql.PreparedStatement;
 import com.datastax.oss.driver.api.core.cql.ResultSet;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestTemplate;
 
+import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -48,11 +53,15 @@ public class TelemetryService {
     session.execute(boundStatement);
   }
 
-  public ResponseReadTelemetry readTelemetry(RequestReadTelemetry request) {
-    BoundStatement boundStatement = selectStatement.bind(request.getDeviceId());
+  public Collection<Telemetry> readTelemetry(RequestReadTelemetry request) {
+    RestTemplate restTemplate = new RestTemplate();
+    ResponseEntity<DeviceIdDto> response = restTemplate.getForEntity(
+        "http://localhost:8091/device/" + request.getLogin() + "/" + request.getDeviceName(), DeviceIdDto.class);
+
+    BoundStatement boundStatement = selectStatement.bind(response.getBody().getId());
     ResultSet result = session.execute(boundStatement);
 
-    List<Telemetry> audits = result.all().stream()
+    return result.all().stream()
         .map(row -> new Telemetry(
             row.getString("device_id"),
             row.getInstant("time"),
@@ -63,8 +72,6 @@ public class TelemetryService {
             row.getString("rssi"),
             row.getString("snr")
         ))
-        .collect(Collectors.toList());
-
-    return new ResponseReadTelemetry(audits);
+        .toList();
   }
 }
